--- a/src/components/Header/components/NavigationBar/index.scss
+++ b/src/components/Header/components/NavigationBar/index.scss
@@ -1,16 +1,18 @@
 @import '../../../../index.scss';
 
-.NavigationBar {
+.navigationBar {
+  display: flex;
+  align-self: center;
   > ul {
-    list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    list-style-type: none;
     > li {
       text-transform: uppercase;
       font-size: 12px;
       margin-right: 60px;
       > a {
+        color: #999;
         text-decoration: none;
         transition: color .2s ease-in-out;
         &::after {
