--- a/src/components/Header/components/NavigationBar/index.scss
+++ b/src/components/Header/components/NavigationBar/index.scss
@@ -10,7 +10,7 @@
     > li {
       text-transform: uppercase;
       font-size: 12px;
-      margin-right: 60px;
+      margin-left: 60px;
       > a {
         color: #999;
         text-decoration: none;
